--- a/css/basic.css
+++ b/css/basic.css
@@ -1,48 +1,76 @@
-*{
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 #sidebar {
-    background-color:#FFFF;
-    height: 100vh;
-    width: 250px;
-    position: fixed;
-    z-index: 300;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+  background-color: #ffff;
+  height: 100vh;
+  width: 275px;
+  position: fixed;
+  z-index: 300;
+  box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+  transition: 0.5s;
 }
 
 #sidebar-logo {
-    height: 80px;
-    padding: 5px 0;
-    text-align: center;
+  height: 80px;
+  padding: 5px 0;
+  text-align: center;
 }
 
 #sidebar-logo img {
-    height: 100%;
+  height: 100%;
 }
 
 header {
-    
-    height: 80px;
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+  height: 80px;
+  box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
 }
 
 #main-area {
-    transform: translate(250px);
-    width: calc(100% - 250px);
+  transform: translate(275px);
+  width: calc(100% - 275px);
+  transition: 0.5s;
 }
 
 #content {
-    min-height: calc(100vh - 150px);
+  min-height: calc(100vh - 120px);
 }
 
 #footer {
-
-    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
-    width: 100%;
-    bottom: 0;
-    height: 70px;
+  width: 100%;
+  bottom: 0;
+  height: 40px;
+  box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
 }
 
-#menu-list{
-    margin-top: 20px;
+#menu-list {
+  margin-top: 20px;
+}
+
+i {
+  padding: 20px;
+  cursor: pointer;
+}
+/* CSS CLASSES FOR SMOOTH TRANSITION */
+.hide-left-sidebar {
+  transform: translateX(-350px);
+}
+.collapse-main-content {
+  width: 100% !important;
+  transform: translateX(0px) !important;
+}
+
+/* Accordion css */
+
+.accordion-button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.accordion-body {
+  border-bottom: 1px solid #e5e1e1;
+  padding-left: 40px;
 }
