--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,63 @@
 #left-sidebar {
-    position: fixed;
-    height: 100vh;
-    width: 280px;
-    top: 0;
-    bottom: 0;
-    background: #fff;
-    z-index: 500;
-    border-right: 2px solid #f1f1f1;
-    transition: 0.5s;
+  position: fixed;
+  height: 100vh;
+  width: 280px;
+  top: 0;
+  bottom: 0;
+  background: #fff;
+  z-index: 500;
+  border-right: 2px solid #f1f1f1;
+  transition: 0.5s;
 }
 
 #sidebar-logo {
-    height: 70px;
-    padding: 5px 0;
-    text-align: center;
-    box-shadow: -5px 2px 7px 0px #ddd;
+  height: 70px;
+  padding: 5px 0;
+  text-align: center;
+  box-shadow: -5px 2px 7px 0px #ddd;
 }
 
 #sidebar-logo img {
-    height: 100%;
+  height: 100%;
 }
 
-
 #left-sidebar .nav-items {
-    list-style: none;
-    padding-left: 0;
+  list-style: none;
+  padding-left: 0;
 }
 
 #left-sidebar .nav-items li {
-    padding: 15px;
-    border-bottom: 1px solid #ddd;
+  padding: 15px;
+  border-bottom: 1px solid #ddd;
 }
 
 #header {
-    height: 70px;
-    background: rgb(255, 255, 255);
-    box-shadow: 0px 2px 7px 0px #ddd;
+  height: 70px;
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 2px 7px 0px #ddd;
 }
 
 #main-content {
-    transform: translateX(280px);
-    width: calc(100% - 280px);
-    transition: 0.5s;
+  transform: translateX(280px);
+  width: calc(100% - 280px);
+  transition: 0.5s;
 }
 
 #content-body {
-    min-height: calc(100vh - 150px);
+  min-height: calc(100vh - 150px);
 }
 
 #footer {
-    height: 80px;
-    color: white;
-    text-align: center;
+  height: 80px;
+  color: white;
+  text-align: center;
 }
 
-
-
-/* CSS CLASSES FOR SMOOT TRANSITION */
+/* CSS CLASSES FOR SMOOTH TRANSITION */
 .hide-left-sidebar {
-    transform: translateX(-350px);
+  transform: translateX(-350px);
 }
 .collapse-main-content {
-    width: 100%!important;
-    transform: translateX(0px)!important;
+  width: 100% !important;
+  transform: translateX(0px) !important;
 }
