--- a/css/basic.css
+++ b/css/basic.css
@@ -9,9 +9,9 @@
   height: 100vh;
   width: 275px;
   position: fixed;
-  z-index: 300;
+  z-index: 10000;
   box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
 }
 
 #sidebar-logo {
@@ -32,10 +32,11 @@ header {
 #main-area {
   transform: translate(275px);
   width: calc(100% - 275px);
-  transition: 0.5s;
+  transition: 0.5s ease-in-out;
 }
 
 #content {
+  background-color: #E0E0E0;
   min-height: calc(100vh - 120px);
 }
 
@@ -46,18 +47,16 @@ header {
   box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
 }
 
-#menu-list {
-  margin-top: 20px;
-}
-
 i {
   padding: 20px;
   cursor: pointer;
 }
+
 /* CSS CLASSES FOR SMOOTH TRANSITION */
 .hide-left-sidebar {
   transform: translateX(-350px);
 }
+
 .collapse-main-content {
   width: 100% !important;
   transform: translateX(0px) !important;
@@ -71,6 +70,50 @@ i {
 }
 
 .accordion-body {
-  border-bottom: 1px solid #e5e1e1;
   padding-left: 40px;
+  padding-bottom: 7px;
+}
+
+/* Resume Box */
+
+.resume-box {
+  margin: 20px;
+  width: 750px;
+  height: 800px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+#resume-name {
+  height: 30%;
+  text-align: center;
+}
+
+#resume-role {
+  height: 20%;
+  text-align: center;
+}
+
+#resume-education {
+  height: 30%;
+  text-align: center;
+
+}
+
+#resume-skills {
+  height: 20%;
+  text-align: center;
+
+}
+
+.row div {
+  border-radius: 20px;
+}
+
+#resume-photo {
+
+  margin: 55px 10px 30px;
+  height: 100px;
+  width: 70px;
+  border: 1px solid black;
 }
