--- a/main-content/style.css
+++ b/main-content/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #eeeef7 !important;
+  background-color: #F6F8FA !important;
 }
 
 #resume-box {
@@ -327,7 +327,12 @@ h1 {
   margin: 0;
 }
 
+select {
+  min-width: 150px;
+}
+
 input {
+  min-width: 150px !important;
   padding: 5px;
   border-radius: 25px !important;
   background-color: #eee;
@@ -476,6 +481,15 @@ button {
   display: none;
   height: 100%;
   width: 100%;
+}
+
+.showdiv{
+  height: 100%;
+  width: 100%; 
+}
+
+.bodyremove{
+  display: none;
 }
 
 /* ********************************Media Query For different device widths less than 768px**************************************/
