--- a/skills.css
+++ b/skills.css
@@ -32,8 +32,27 @@ body {
 }
 
 #right-skill-box li {
-    width: 50%;
+    border: 1px solid #ddd;
+    margin: 20px;
+    height: 45px;
+    width: 90%;
 }
+
+#right-skill-box li i {
+    padding: 6px 15px 6px;
+    border-right: 1px solid black;
+}
+
+#right-skill-box li a {
+    padding-top: 10px;
+    margin-top: -1px;
+    /* Prevent double borders */
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block
+}
+
 #left-skill-box {
     min-width: 50%;
     height: 60vh;
@@ -63,6 +82,7 @@ body {
     padding: 0;
     margin: 0;
 }
+
 
 #myUL li {
     border: 1px solid #ddd;
@@ -119,4 +139,9 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: linear-gradient(to right, #3983fa);
+}
+
+#buttons-row {
+    margin-top: 30%;
+    bottom: 0;
 }
