--- a/main-content/style.css
+++ b/main-content/style.css
@@ -380,6 +380,19 @@ label {
   font-size: 16px;
 }
 
+.temporary-address{
+  padding-top: 20px;
+}
+
+@media screen and (max-width: 1030px) {
+
+  .temporary-address{
+    padding-top: 40px;
+  }
+  .country-heading{
+    padding-top: 0!important;
+  }
+}
 /* ********************************Styling for Work Experience Modal***************************************/
 
 .full-screen {
@@ -499,21 +512,21 @@ button {
 }
 
 #soft-skill-box {
-  width: 32%;
-  height: 70vh;
+  width: 100%;
+  height: 50vh;
   overflow: auto;
   scroll-behavior: smooth;
 }
 
 #hard-skill-box {
-  width: 32%;
-  height: 70vh;
+  width: 100%;
+  height: 50vh;
   overflow: auto;
   scroll-behavior: smooth;
 }
 
 #review-box {
-  width: 36%;
+  width: 100%;
 }
 
 #hard-skill-review-box {
